add_executable(incswap increment_and_swap.c)
add_executable(arrays_pointers arrays_pointers.c)
add_executable(array_names_are_const array_names_are_const.c)
add_executable(heap_memory heap_memory.c)
add_executable(memory_management memory_management.c)
add_executable(dynamic_arrays dynamic_arrays.c)
add_executable(dynamic_strings dynamic_strings.c)
add_executable(plus_one plus_one.c)
add_executable(pointers pointers.c)
add_executable(scanf scanf.c)
add_executable(fork1 fork1.c)